--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
           <h2 class="visually-hidden">Professionalism</h2>
           <ul class="description-list">
             <li class="description-list-item">
+              <div class="deskr-box">
+                <svg class="deskr-icon">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="description-title">Strategy</h3>
               <p class="description-text">
                 Our goal is to identify the business problem to walk away with
@@ -75,6 +80,11 @@
               </p>
             </li>
             <li class="description-list-item">
+              <div class="deskr-box">
+                <svg class="deskr-icon">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="description-title">Punctuality</h3>
               <p class="description-text">
                 Bring the key message to the brand's audience for the best price
@@ -82,6 +92,11 @@
               </p>
             </li>
             <li class="description-list-item">
+              <div class="deskr-box">
+                <svg class="deskr-icon">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="description-title">Diligence</h3>
               <p class="description-text">
                 Research and confirm brands with the strongest digital growth
@@ -89,6 +104,11 @@
               </p>
             </li>
             <li class="description-list-item">
+              <div class="deskr-box">
+                <svg class="deskr-icon">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="description-title">Technologies</h3>
               <p class="description-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -113,6 +133,36 @@
               <div class="item-container">
                 <h3 class="team-list-subtitle">Mark Guerrero</h3>
                 <p class="team-list-text">Product Designer</p>
+                <ul class="social-media-list">
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -126,6 +176,36 @@
               <div class="item-container">
                 <h3 class="team-list-subtitle">Tom Ford</h3>
                 <p class="team-list-text">Frontend Developer</p>
+                <ul class="social-media-list">
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -139,6 +219,36 @@
               <div class="item-container">
                 <h3 class="team-list-subtitle">Camila Garcia</h3>
                 <p class="team-list-text">Marketing</p>
+                <ul class="social-media-list">
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -152,6 +262,36 @@
               <div class="item-container">
                 <h3 class="team-list-subtitle">Daniel Wilson</h3>
                 <p class="team-list-text">UI Designer</p>
+                <ul class="social-media-list">
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -162,78 +302,120 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/card1.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="cover">
+                <img
+                  class="portfolio-img"
+                  src="./images/card1.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-subtitle">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/card2.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="cover">
+                <img
+                  class="portfolio-img"
+                  src="./images/card2.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/card3.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="cover">
+                <img
+                  class="portfolio-img"
+                  src="./images/card3.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <p class="cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/card4.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="cover">
+                <img
+                  class="portfolio-img"
+                  src="./images/card4.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <p class="cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/card5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="cover">
+                <img
+                  class="portfolio-img"
+                  src="./images/card5.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/card6.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="cover">
+                <img
+                  class="portfolio-img"
+                  src="./images/card6.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -245,13 +427,48 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="footer-logo" href="./index.html"
-          >Web<span class="footer-logo-accent">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-wrapper">
+          <a class="footer-logo" href="./index.html"
+            >Web<span class="footer-logo-accent">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-social-media">
+          <p class="social-media-text">Social media</p>
+          <ul class="footer-media-list">
+            <li class="footer-media-item">
+              <a class="footer-media-link" href="">
+                <svg class="footer-media-icon">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-media-item">
+              <a class="footer-media-link" href="">
+                <svg class="footer-media-icon">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-media-item">
+              <a class="footer-media-link" href="">
+                <svg class="footer-media-icon">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-media-item">
+              <a class="footer-media-link" href="">
+                <svg class="footer-media-icon">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
