--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <ul class="description-list">
             <li class="description-list-item">
               <div class="deskr-box">
-                <svg class="deskr-icon">
+                <svg class="deskr-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -81,7 +81,7 @@
             </li>
             <li class="description-list-item">
               <div class="deskr-box">
-                <svg class="deskr-icon">
+                <svg class="deskr-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -93,7 +93,7 @@
             </li>
             <li class="description-list-item">
               <div class="deskr-box">
-                <svg class="deskr-icon">
+                <svg class="deskr-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -105,7 +105,7 @@
             </li>
             <li class="description-list-item">
               <div class="deskr-box">
-                <svg class="deskr-icon">
+                <svg class="deskr-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -136,28 +136,28 @@
                 <ul class="social-media-list">
                   <li class="social-media-item">
                     <a class="social-media-link" href="">
-                      <svg class="social-media-icon">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a class="social-media-link" href="">
-                      <svg class="social-media-icon">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a class="social-media-link" href="">
-                      <svg class="social-media-icon">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a class="social-media-link" href="">
-                      <svg class="social-media-icon">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -179,28 +179,28 @@
                 <ul class="social-media-list">
                   <li class="social-media-item">
                     <a class="social-media-link" href="">
-                      <svg class="social-media-icon">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a class="social-media-link" href="">
-                      <svg class="social-media-icon">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a class="social-media-link" href="">
-                      <svg class="social-media-icon">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a class="social-media-link" href="">
-                      <svg class="social-media-icon">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -222,28 +222,28 @@
                 <ul class="social-media-list">
                   <li class="social-media-item">
                     <a class="social-media-link" href="">
-                      <svg class="social-media-icon">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a class="social-media-link" href="">
-                      <svg class="social-media-icon">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a class="social-media-link" href="">
-                      <svg class="social-media-icon">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a class="social-media-link" href="">
-                      <svg class="social-media-icon">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -265,28 +265,28 @@
                 <ul class="social-media-list">
                   <li class="social-media-item">
                     <a class="social-media-link" href="">
-                      <svg class="social-media-icon">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a class="social-media-link" href="">
-                      <svg class="social-media-icon">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a class="social-media-link" href="">
-                      <svg class="social-media-icon">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a class="social-media-link" href="">
-                      <svg class="social-media-icon">
+                      <svg class="social-media-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -441,28 +441,28 @@
           <ul class="footer-media-list">
             <li class="footer-media-item">
               <a class="footer-media-link" href="">
-                <svg class="footer-media-icon">
+                <svg class="footer-media-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-media-item">
               <a class="footer-media-link" href="">
-                <svg class="footer-media-icon">
+                <svg class="footer-media-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-media-item">
               <a class="footer-media-link" href="">
-                <svg class="footer-media-icon">
+                <svg class="footer-media-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-media-item">
               <a class="footer-media-link" href="">
-                <svg class="footer-media-icon">
+                <svg class="footer-media-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
